<resources>
    <string name="app_name">Projet_smartphone</string>
    <string name="title_activity_trajectory_add">Visualisation d\'une trajectoire</string>
    <string name="title_activity_maps">Pilote du drone</string>
    <string name="title_popup_save">Nom de la trajectoire :</string>
    <string name="title_popup_speed">Vitesse de la trajectoire en Knots : </string>
    <string name="button_lancer">Lancer</string>
    <string name="button_sauvegarder">Sauvegarder</string>
    <string name="button_annuler">Annuler</string>
    <string name="main_menu_title">WaveRider</string>
    <string name="main_menu_button_drone">Piloter mon drone</string>
    <string name="main_menu_button_trajectory">Créer une trajectoire</string>
    <string name="main_menu_button_mytrajectory">Mes trajectoires</string>
    <string name="title_activity_mytrajectory">Mes trajectoires</string>
    <string name="button_ajouter">Ajouter</string>
    <string name="button_camera_fixe">Caméra fixe</string>
    <string name="button_camera_suivi">Suivi de la caméra</string>
    <string name="button_follow_camera">Suivi de la caméra</string>
    <string name="spped_text_default">0 knots</string>
    <string name="bouton_zoom_desc">Bouton Zoom</string>
    <string name="bouton_dezoom_desc">Bouton DeZoom</string>
    <string name="app_logo">Logo de l\'application</string>
    <string name="button_default_item">1</string>
    <string name="button_lancer_encours">En cours</string>
</resources>
