<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />
    <TextView
        android:id="@+id/speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:text="@string/spped_text_default"
        android:padding="10dp"
        android:background="@drawable/speed_circle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp" />
    <Button
        android:id="@+id/toggle_camera_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_follow_camera" />

    <ImageButton
        android:id="@+id/zoom_in_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_button"
        app:srcCompat="@drawable/ic_plus"
        android:contentDescription="@string/bouton_dezoom_desc"
        />

    <ImageButton
        android:id="@+id/zoom_out_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/zoom_in_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        app:srcCompat="@drawable/ic_minus"
        android:contentDescription="@string/bouton_zoom_desc" />




</RelativeLayout>
